@@ -9,7 +9,7 @@ copyright_year   = 2011
 [Prereqs]
 Moose = 1.24
 MooseX::Getopt = 0.35
-WWW::DuckDuckGo = 0.001
+WWW::DuckDuckGo = 0.004
 
 [Prereqs / TestRequires]
 Test::More = 0.90
