@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+	- Added --forcesecure flag for forcing https
+	- Added answer handling
+	- Using newest WWW::DuckDuckGo
 
 0.005     2011-03-07 18:32:56 Europe/Berlin
 	- Fixed stupid use
